# ink-fish-server

./: .env  Cargo.toml  config.py  database.sql  main.py
database/: account.py  configure.py  connection.py
router/: account.py
src/: db.rs  error.rs  main.rs
src/model/: user.rs
src/router/: user.rs
