[package]
name = "ink-fish-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
salvo = { version = "0.37.4" }
tokio = { version = "1", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "sqlite"] }
dotenv = "0.15.0"
thiserror = "1.0.37"
once_cell = "1.16.0"
