[package]
name = "ink-fish-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
salvo = { version = "0.37.4" }
tokio = { version = "1", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "postgres", "json", "chrono"] }
dotenv = "0.15.0"
thiserror = "1.0.37"
once_cell = "1.16.0"
chrono = { version = "0.4.23", features = ["serde"] }
rand = "0.8.5"
fastrand = "1.8.0"
md5 = "0.7.0"
